# pyregression

./: .gitignore  README.md  pyproject.toml
docs/: r_algorithm_analysis.md
pyregression/: __init__.py  _utils.py  datasets.py  glm.py  lm.py
pyregression/_backends/: __init__.py  base.py  cpu_fp64_backend.py  gpu_fp32_backend.py  gpu_fp64_backend.py  gpu_mps_ridge_backend.py  precision_detector.py  ridge_suitability.py
pyregression/_core/: __init__.py  families.py  glm_solver.py  lm_solver.py  qr.py
pyregression/gpu/: __init__.py
pyregression/reference/: __init__.py  families.py  glm.py  linear_model.py  qr.py
pyregression/utils/: __init__.py
reference/: README.md
reference/r-source/: README.md
tests/: __init__.py  demo.py  generate_fixtures.R  test_backends.py  test_gpu_backends.py  test_lm_vs_r.py  test_real_world_regression.py  tmp.py
tests/benchmark/: .gitignore  benchmark_python.py  benchmark_r.R  prepare_data.py
tests/fixtures/: README.md  ill_conditioned.json  intercept_only.json  large_regression.json  rank_deficient.json  simple_regression.json  single_predictor.json  summary.json
