[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyregression"
version = "0.1.0"
description = "GPU-accelerated statistical inference with R-compatible numerics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "SGCX", email = "contact@sgcx.com"}
]
keywords = ["statistics", "regression", "gpu", "glm", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "rpy2>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/sgcx/PyRegression"
Repository = "https://github.com/sgcx/PyRegression"

[tool.setuptools]
packages = ["pyregression"]
